--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -35,7 +35,7 @@
 			},
 			"preview": {
 				"title": "Painel de pré-visualização",
-				"description": "Preview photos, videos, and documents without opening them."
+				"description": "Pré-visualize fotos, vídeos e documentos sem precisar abrir."
 			},
 			"popup-preview": {
 				"title": "Suporte ao QuickLook & SeerPro",
