--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -93,7 +93,7 @@
 		"share": {
 			"default": "Native sharing",
 			"url": "Copy URL",
-			"tweet": "Twitter",
+			"tweet": "X",
 			"facebook": "Facebook",
 			"rss": "RSS Feed"
 		}
